--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "parcel": "^2.3.1",
     "prettier": "^2.5.1",
-    "shx": "^0.3.3"
+    "shx": "^0.3.3",
+    "tailwindcss": "^3.0.24"
   }
 }
