MISC : Update packages to last update + corrected lint errors CSS : Update button styles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@next/next/recommended",
-        "eslint:recommended", "next"
+        "plugin:@next/next/recommended"
     ],
     "rules": {
         "react/prop-types": 0,
