MISC : Update .gitignore + remove package.lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 dist
 docs
 node_modules
-.env
 env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
@@ -30,3 +29,4 @@ yarn-error.log*
 .next
 yarn.lock
 .vercel
+package-lock.json
