--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ docs
 node_modules
 .env
 env
+sol.env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
