Fixes to local deployments

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@splinetool/runtime": "^0.9.69",
     "bignumber.js": "^9.0.2",
     "crypto-js": "^4.1.1",
+    "express": "^4.18.1",
+    "express-promise-router": "^4.1.1",
+    "fs": "^0.0.1-security",
     "ipfs-core": "^0.14.3",
     "ipfs-http-client": "^56.0.3",
     "next": "^12.1.0",
