Minor change to gitignore for local storage .env files used in dev

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ docs
 node_modules
 .env
 env
-sol.env
+*.env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
