--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.3.0",
     "@project-serum/anchor": "^0.25.0-beta.1",
     "@react-three/drei": "^7.20.5",
     "@react-three/fiber": "^7.0.19",
     "@solana/pay": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
+    "@solana/wallet-adapter-coinbase": "^0.1.3",
     "@solana/wallet-adapter-react": "^0.15.3",
     "@solana/wallet-adapter-react-ui": "^0.9.5",
     "@solana/wallet-adapter-wallets": "^0.16.0",
