--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@solana/wallet-adapter-wallets": "^0.16.0",
     "@solana/web3.js": "^1.36.0",
     "bignumber.js": "^9.0.2",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "ipfs-core": "^0.14.3",
     "ipfs-http-client": "^56.0.3",
